--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "uuid": "^8.0.0",
+    "uuidv4": "^6.0.8",
     "vue": "^2.6.11"
   },
   "devDependencies": {
